feat: Scaffold FLYFOX AI Quantum Hub - MCP-style subsystem
- Create quantum hub directory structure with schemas, registry, adapters, mappers, policy
- Implement comprehensive Pydantic data models for problems, jobs, results, audit records
- Build capability and provider registries with async operations
- Create MCP provider descriptor with tools, resources, events
- Add comprehensive documentation for quantum hub architecture and usage
- Establish LTC hooks for audit logging and governance
- Brand all components under FLYFOX AI Quantum

This completes Step 1 of the Quantum Hub implementation plan.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 # FLYFOX AI Quantum Computing Platform Configuration
-# This file contains all available configuration options
+# Default configuration file
 
 quantum:
   max_qubits: 32
@@ -32,5 +32,5 @@ agent:
 logging:
   level: "INFO"
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-  file_path: "logs/flyfox_quantum.log"
+  file_path: null
   enable_console: true
