--- a/requirements.txt
+++ b/requirements.txt
@@ -1,98 +1,21 @@
-# NQBA (Neuromorphic Quantum Business Architecture) Platform Dependencies
+# Core NQBA Stack Dependencies
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
 
-# Core quantum computing libraries
-qiskit>=0.44.0
-qiskit-aer>=0.12.0
-qiskit-optimization>=0.5.0
-qiskit-machine-learning>=0.5.0
-qiskit-finance>=0.4.0
-qiskit-nature>=0.6.0
+# Authentication & Security
+bcrypt==4.1.2
+PyJWT==2.8.0
+python-multipart==0.0.6
 
-# Dynex integration
-dynex>=0.1.0
-
-# AI and machine learning
-openai>=1.0.0
-anthropic>=0.7.0
-transformers>=4.30.0
-torch>=2.0.0
-numpy>=1.24.0
-numpy>=1.26.0
-dimod>=0.12.0
-pytest>=8.0.0
-pytest-cov>=4.0.0
-hypothesis>=6.0.0
-fastapi>=0.110.0
-uvicorn[standard]>=0.29.0
-web3>=6.0.0
-python-jose[cryptography]>=3.3.0
-ipfshttpclient>=0.8.0
-pydantic-settings>=2.0.0
-python-dotenv>=1.0.0
-prometheus-client>=0.19.0
-opentelemetry-api>=1.24.0
-opentelemetry-sdk>=1.24.0
-celery>=5.3.0
-redis>=5.0.0
-structlog>=23.1.0
-colorama>=0.4.6
-
-# Voice processing (optional)
-SpeechRecognition>=3.10.0
-pyttsx3>=2.90
-pyaudio>=0.2.11
-
-# Data processing and visualization
-pandas>=2.0.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-plotly>=5.15.0
-
-# Database and storage
-sqlalchemy>=2.0.0
-alembic>=1.11.0
-redis>=4.6.0
+# HTTP Client (for examples and testing)
+requests==2.31.0
 
 # Testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-pytest-cov>=4.1.0
-pytest-mock>=3.11.0
+pytest==7.4.3
+pytest-asyncio==0.21.1
+httpx==0.25.2
 
-# Development tools
-black>=23.7.0
-flake8>=6.0.0
-mypy>=1.5.0
-pre-commit>=3.3.0
-
-# Documentation
-sphinx>=7.1.0
-sphinx-rtd-theme>=1.3.0
-
-# Security
-cryptography>=41.0.0
-bcrypt>=4.0.0
-
-# Async and concurrency
-asyncio-mqtt>=0.13.0
-aiofiles>=23.1.0
-
-# File processing
-openpyxl>=3.1.0
-xlrd>=2.0.1
-python-docx>=0.8.11
-PyPDF2>=3.0.0
-
-# Cloud integration
-boto3>=1.28.0
-google-cloud-storage>=2.10.0
-azure-storage-blob>=12.17.0
-
-# Performance optimization
-numba>=0.57.0
-cython>=3.0.0
-
-# Additional utilities
-schedule>=1.2.0
-croniter>=1.4.0
-apscheduler>=3.10.0
+# Development
+python-dotenv==1.0.0
