--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,178 +1,119 @@
-name: CI/CD Pipeline
+name: CI
 
 on:
   push:
     branches: [ main, develop ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
-  test:
+  build-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8, 3.9, 3.10, 3.11]
-        os: [ubuntu-latest]
-
+        python-version: ['3.9', '3.10', '3.11']
+    
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Cache pip dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-${{ matrix.python-version }}-
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -e .
-    
-      - name: Run all tests (unit, integration, quantum)
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+            
+      - name: Install dependencies
         run: |
-          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
-          pytest tests/ -v --cov=src --cov-report=xml --cov-report=html
-          pytest tests/test_dynex_integration.py -v
-          pytest tests/test_dynex_api_ftp.py -v
-          pytest tests/test_sigma_select_quantum.py -v
-          pytest tests/test_flyfox_energy_quantum.py -v
-          pytest tests/test_goliath_trade_quantum.py -v
-        pytest tests/test_sigma_select_quantum.py -v
-        pytest tests/test_flyfox_energy_quantum.py -v
-        pytest tests/test_goliath_trade_quantum.py -v
-    
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        flags: unittests
-        name: codecov-umbrella
-
-  lint:
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+          
+      - name: Run tests
+        run: |
+          pytest tests/ --cov=src/ --cov-report=xml --cov-report=html
+          
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          file: ./coverage.xml
+          flags: unittests
+          name: codecov-umbrella
+          
+      - name: Lint code
+        run: |
+          flake8 src/ tests/ --max-line-length=88 --extend-ignore=E203,W503
+          black --check src/ tests/
+          isort --check-only src/ tests/
+          
+      - name: Type checking
+        run: |
+          mypy src/ --ignore-missing-imports --no-strict-optional
+          
+      - name: Security scan
+        run: |
+          bandit -r src/ -f json -o bandit-report.json || true
+          
+      - name: Dependency vulnerability check
+        run: |
+          safety check --json --output safety-report.json || true
+          
+      - name: Upload security reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: security-reports
+          path: |
+            bandit-report.json
+            safety-report.json
+            coverage.xml
+            htmlcov/
+            
+  security-audit:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.11]
-
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install black flake8 mypy
-    
-    - name: Run Black (code formatting)
-      run: |
-        black --check --diff src/ tests/
-    
-    - name: Run Flake8 (linting)
-      run: |
-        flake8 src/ tests/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 src/ tests/ --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
-    
-    - name: Run MyPy (type checking)
-      run: |
-        mypy src/ --ignore-missing-imports
-
-  build:
-    runs-on: ubuntu-latest
-    needs: [test, lint]
+    needs: build-test
     
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
-    
-    - name: Install build dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
-    
-    - name: Build package
-      run: |
-        python -m build
-    
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      with:
-        name: dist
-        path: dist/
-
-  security:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          
+      - name: Upload Trivy scan results
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: 'trivy-results.sarif'
+          
+  docker-build:
     runs-on: ubuntu-latest
+    needs: build-test
     
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install bandit safety
-    
-    - name: Run Bandit (security linting)
-      run: |
-        bandit -r src/ -f json -o bandit-report.json || true
-    
-    - name: Run Safety (dependency vulnerability check)
-      run: |
-        safety check --json --output safety-report.json || true
-    
-    - name: Upload security reports
-      uses: actions/upload-artifact@v3
-      with:
-        name: security-reports
-        path: |
-          bandit-report.json
-          safety-report.json
-
-  quantum-tests:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.11]
-    
-    steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -e .
-    
-    - name: Run quantum examples
-      run: |
-        python src/goliath/quantum/examples/run_qubo_demo.py
-    
-    - name: Run integration tests
-      run: |
-        python test_integration.py
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        
+      - name: Build Docker image
+        run: |
+          docker build -t goliath-quantum-starter:${{ github.sha }} .
+          docker build -t goliath-quantum-starter:latest .
+          
+      - name: Run container security scan
+        run: |
+          docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
+            aquasec/trivy image goliath-quantum-starter:${{ github.sha }}
 
