--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,15 @@ httpx==0.25.2
 
 # Development
 python-dotenv==1.0.0
+
+# Quantum and optimization dependencies
+dimod==0.12.0
+ortools==9.8.3296
+
+# Security and compliance dependencies
+cryptography==41.0.7
+ipfshttpclient==0.8.0
+boto3==1.34.0
+google-cloud-kms==2.18.0
+azure-keyvault-secrets==4.7.0
+hvac==1.2.0
