--- a/requirements.txt
+++ b/requirements.txt
@@ -31,3 +31,15 @@ boto3==1.34.0
 google-cloud-kms==2.18.0
 azure-keyvault-secrets==4.7.0
 hvac==1.2.0
+
+# Observability & SRE
+opentelemetry-api==1.21.0
+opentelemetry-sdk==1.21.0
+opentelemetry-instrumentation-fastapi==0.42b0
+opentelemetry-instrumentation-redis==0.42b0
+opentelemetry-instrumentation-requests==0.42b0
+opentelemetry-exporter-jaeger==1.21.0
+opentelemetry-exporter-otlp-proto-grpc==1.21.0
+streamlit==1.28.0
+plotly==5.17.0
+pandas==2.1.0
