Update domain to goliathomniedge.com for Vercel deployment

--- a/nqba-phase2/web/vercel.json
+++ b/nqba-phase2/web/vercel.json
@@ -8,7 +8,7 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_API_BASE": "https://api.flyfoxai.io"
+    "NEXT_PUBLIC_API_BASE": "https://api.goliathomniedge.com"
   },
   "functions": {
     "app/**/*.tsx": {
