Complete platform redesign: Dynex-inspired clean aesthetic with professional layout, typography, and components

--- a/nqba-phase2/web/vercel.json
+++ b/nqba-phase2/web/vercel.json
@@ -1,19 +1,10 @@
 {
   "version": 2,
-  "name": "nqba-phase2-web",
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/next"
-    }
-  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install",
   "env": {
     "NEXT_PUBLIC_API_BASE": "https://api.goliathomniedge.com"
-  },
-  "functions": {
-    "app/**/*.tsx": {
-      "includeFiles": "**"
-    }
   },
   "rewrites": [
     {
